# N-body-simulation-in-Rust

./: README.md
docs/: rust-n-body_bg.wasm.d.ts
rust-n-body/: Cargo.toml
rust-n-body/src/: bhtree.rs  collision.rs  idktree.rs  main.rs  quadtree.rs  tests.rs
rust-n-body/web/: index.html  rust-n-body.d.ts  rust-n-body.js  rust-n-body_bg.wasm.d.ts
