[package]
name = "rust-n-body"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.16.0"
bevy_egui = "0.34.1"
rand = "0.9.1"
wasm-bindgen = "0.2.100"
getrandom = { version = "0.3", features = ["wasm_js"] }

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
